# AINews-Summarizer

./: ARCHITECTURE.md  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: app.py
migrations/: env.py
src/: config.py  main.py  observability.py  scheduler.py
src/agents/: digest_composer.py  email_sender.py  paper_searcher.py  paper_summarizer.py
src/api/: routes.py
src/graph/: workflow.py
src/models/: db.py  schemas.py  session.py
src/templates/: digest.html
tests/: test_api.py  test_composer.py  test_searcher.py  test_summarizer.py
