[project]
name = "ainsight"
version = "0.1.0"
description = "Daily AI Research Paper Digest — automated search, summarize, and email delivery"
requires-python = ">=3.11"

dependencies = [
    # LLM & Orchestration
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langgraph>=0.3",

    # Data models & config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Cache
    "redis>=5.0",

    # Paper sources
    "requests>=2.31",
    "xmltodict>=0.13",

    # Email
    "jinja2>=3.1",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Scheduler
    "apscheduler>=3.10",

    # Reliability
    "tenacity>=9.0",

    # Logging
    "structlog>=24.0",

    # Observability
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]
frontend = [
    "streamlit>=1.38",
]

[project.scripts]
ainsight = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
